--- a/microservice-dev.properties
+++ b/microservice-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/cloudmanager
+spring.datasource.url=jdbc:mysql://localhost:3306/springcloud
 
 #cloudmanager
 spring.datasource.username=root
